--- a/LLM_Business_News_Parsing/__main__.tex
+++ b/LLM_Business_News_Parsing/__main__.tex
@@ -22,10 +22,16 @@
 
 \author[1]{
 { 
-\sx \bx 
+%\sx \bx 
 Jesus Villota Miranda$^{\dagger}$\footnote{
-I am grateful to Enrique Sentana, Menuel Arellano, Dante Amengual, Rafael Repullo, Julio Crego, Francisco Penaranda, Javier Suarez, David Martinez-Miera, Luis Varona, Nicolas Forteza, and Matias Covarrubias for useful comments and feedback. 
-I acknowledge financial support from Banco de España (BdE). 
+%I am grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suarez, David Martinez-Miera, Julio Crego and Francisco Penaranda for their comments and feedback. 
+%I am especially grateful to Nicolas Forteza and Matias Covarrubias for their guidance. 
+%I am also grateful to Gustavo Schwenkler (discussant) and all the participants of the Generative AI in Finance Conference (Concordia University) and Mirian Andrés Seminar (U. La Rioja).
+%I acknowledge financial support from Banco de España (BdE). 
+\scriptsize{I am deeply grateful to Enrique Sentana, Manuel Arellano, Dante Amengual, Rafael Repullo, Javier Suárez, David Martínez-Miera, Julio Crego, and Francisco Peñaranda for their comments. I am especially indebted to Nicolás Forteza and Matías Covarrubias, whose invaluable guidance and insights have greatly enriched this work. I also thank Gustavo Schwenkler for his thoughtful discussion, as well as the participants of the Generative AI in Finance Conference at Concordia University and the Mirian Andrés Seminar at the University of La Rioja.
+% for their engaging and insightful comments. 
+Finally, I gratefully acknowledge financial support from Banco de España (BdE).
+}
 }}
 
 \bx 
@@ -37,10 +43,10 @@ $\big{>}$
 $\big{<}$
 Email: \href{jesus.villota@cemfi.edu.es}{\texttt{jesus.villota@cemfi.edu.es}}
 $\big{>}$
-
-\mx 
-\textbf{This version: 17th October 2024}
-
+%
+%\mx 
+%\textbf{This version: 17th October 2024}
+%
 }
 }
 
