--- a/LLM_Business_News_Parsing/bib_references.bib
+++ b/LLM_Business_News_Parsing/bib_references.bib
@@ -471,3 +471,50 @@
   pages={383--417},
   year={1970}
 }
+
+@article{hoberg2016text,
+  title={Text-based network industries and endogenous product differentiation},
+  author={Hoberg, Gerard and Phillips, Gordon},
+  journal={Journal of political economy},
+  volume={124},
+  number={5},
+  pages={1423--1465},
+  year={2016},
+  publisher={University of Chicago Press Chicago, IL}
+}
+
+@article{jha2022does,
+  title={Does finance benefit society? A language embedding approach},
+  author={Jha, Manish and Liu, Hongyi and Manela, Asaf},
+  journal={A Language Embedding Approach (June 1, 2022)},
+  year={2022}
+}
+
+@article{chen2021stock,
+  title={Stock movement prediction with financial news using contextualized embedding from bert},
+  author={Chen, Qinkai},
+  journal={arXiv preprint arXiv:2107.08721},
+  year={2021}
+}
+
+@article{zhang2023feel,
+  title={Feel the Market: An Attempt to Identify Additional Factor in the Capital Asset Pricing Model (CAPM) Using Generative Pre-Trained Transformer (GPT) and Bidirectional Encoder Representations from Transformers (BERT)},
+  author={Zhang, Christopher L},
+  journal={Available at SSRN 4521946},
+  year={2023}
+}
+
+@article{benincasa2022different,
+  title={Different shades of green: Estimating the green bond premium using natural language processing},
+  author={Benincasa, Emanuela and Fu, Jonathan and Mishra, Mrinal and Paranjape, Adityavardhan},
+  journal={Swiss Finance Institute Research Paper},
+  number={22-64},
+  year={2022}
+}
+
+@article{gabaix2023asset,
+  title={Asset embeddings},
+  author={Gabaix, Xavier and Koijen, Ralph SJ and Richmond, Robert and Yogo, Motohiro},
+  journal={Available at SSRN 4507511},
+  year={2023}
+}
