--- a/LLM_Business_News_Parsing/txt_introduction.tex
+++ b/LLM_Business_News_Parsing/txt_introduction.tex
@@ -1,12 +1,14 @@
 %----------------------------------------------------
 % 7th October 2024 | Introduction (used GPT4o with canvas) | https://chatgpt.com/share/6704e351-460c-800d-a267-1656528e9ec7
 %----------------------------------------------------
-In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices.
+\hspace{0.5cm} In financial markets, news plays a pivotal role in shaping stock prices. Every day, market participants respond to a broad spectrum of news ranging from firm-specific announcements, such as earnings releases, to macroeconomic events, such as central bank interest rate announcements, or geopolitical developments, like international trade conflicts or political elections. The Efficient Market Hypothesis (EMH), introduced by \cite{fama1970efficient}, posits that markets efficiently incorporate new information almost instantaneously. Both theoretical perspectives and empirical observations indicate that markets do not always exhibit such efficiency, particularly when the information is complex or ambiguous. This discrepancy between theory and reality suggests significant room for improvement in understanding how news is processed by market participants and how it influences asset prices.
 
-A substantial body of literature has endeavored to predict market reactions to news, yet significant gaps persist. First, there is a lack of granularity in the analysis of information. Traditional approaches frequently rely on sentiment analysis, reducing the richness of news content to binary classifications of positive or negative sentiment. Despite their reductionist nature, sentiment analysis remains popular due to the ease of implementation and interpretability
+A substantial body of literature has endeavored to predict market reactions to news, yet significant gaps persist. 
+%----------------------------------------------------
+First, there is a lack of granularity in the analysis of information. Traditional approaches frequently rely on sentiment analysis, reducing the richness of news content to binary classifications of positive or negative sentiment. Despite their reductionist nature, sentiment analysis remains popular due to the ease of implementation and interpretability
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-(\cite{tetlock2007giving}, \cite{tetlock2008more}, \cite{bollen2011twitter}, \cite{hanley2010information}, \cite{loughran2011liability}, \cite{garcia2013sentiment}, \cite{jegadeesh2013word}, \cite{ke2019predicting}, \cite{wei2018stock}, \cite{lee2020bert}, 
+(\cite{tetlock2007giving}, \cite{tetlock2008more}, \cite{bollen2011twitter}, \cite{hanley2010information}, \cite{loughran2011liability}, \cite{garcia2013sentiment}, \cite{jegadeesh2013word},\cite{wei2018stock}, \cite{ke2019predicting}, \cite{lee2020bert}, 
 \cite{lopez2023can}).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -19,15 +21,25 @@ Sentiment analysis often misses the intricacy inherent in news and is based on l
 (\cite{antweiler2006us}, \cite{hansen2018transparency}, \cite{bybee2021business}, \cite{bybee2023narrative}).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-However, these models are limited in adapting to new and evolving information and lack the specificity needed to assess the precise impact of news on individual firms or sectors. Topic models can identify broad themes, but they struggle to capture the changing context of financial news, particularly when new narratives emerge, such as unexpected geopolitical events or technological disruptions.
+However, these models are limited in adapting to new and evolving information and lack the specificity needed to assess the precise impact of news on individual firms or sectors. Topic models can identify broad themes, but they struggle to capture the changing context of financial news, particularly when new narratives emerge, such as unexpected geopolitical events or technological disruptions. 
+Concurrently, other branches of literature experimented with vector-based models 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+(\cite{hoberg2016text}, \cite{chen2021stock}, \cite{jha2022does}, \cite{benincasa2022different}, \cite{zhang2023feel}, \cite{gabaix2023asset}).
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Traditional approaches like Word2Vec and GloVe, which map words to continuous vector spaces based on their co-occurrence patterns, revolutionized natural language processing by enabling mathematical operations on words and capturing basic semantic relationships. The advent of transformer architectures marked a significant advancement, leading to more sophisticated models such as \texttt{BERT}, \texttt{RoBERTa} or \texttt{GPT}. These transformer-based models process text through multiple attention layers, allowing them to generate context-aware embeddings by considering the relationships between all words in a sequence simultaneously. However, even when fine-tuned with domain-specific training data (e.g., \texttt{FinBERT}), these methods cannot inherently incorporate economic structure, limiting their ability to comprehend the economic implications of news articles.
 
+%----------------------------------------------------
 Second, there is an insufficient focus on firm-specific analysis in the existing literature. Many studies examine the impact of news on broader market indices, such as the S\&P500 or DJIA, rather than on individual firms. While research by 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cite{cutler1988moves}, \cite{mitchell1994impact}, \cite{bollen2011twitter}, \cite{garcia2013sentiment}, \cite{baker2016measuring}, \cite{manela2017news}, \cite{baker2021triggers} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-and others provides valuable insights into market-wide reactions, these studies fall short in elucidating how specific firms are affected by news events. Firm-specific impacts are often masked when aggregated at the index level, leading to a loss of critical information about how particular entities are influenced by specific news. During the COVID-19 pandemic, while overall market indices were impacted significantly, firm-specific effects varied widely, with some sectors like technology and healthcare experiencing positive returns while others, such as hospitality, travel, and retail, experienced significant negative impacts due to widespread lockdowns and reduced consumer spending. Such nuanced differences are often obscured when focusing solely on market indices. Tools like Named Entity Recognition (NER), which could help identify firms impacted by particular events, remain underutilized in financial research, further contributing to the lack of firm-level granularity.
+and others provides valuable insights into market-wide reactions, these studies fall short in elucidating how specific firms are affected by news events. Firm-specific impacts are often masked when aggregated at the index level, leading to a loss of critical information about how particular entities are influenced by specific news. 
+During the COVID-19 pandemic, while overall market indices were impacted significantly, firm-specific effects varied widely, with some sectors like technology and healthcare experiencing positive returns while others, such as hospitality, travel, and retail, experiencing significant negative impacts due to widespread lockdowns and reduced consumer spending. 
+Such nuanced differences are often obscured when focusing solely on market indices. Tools like Named Entity Recognition (NER), which could help identify firms impacted by particular events, remain underutilized in financial research, further contributing to the lack of firm-level granularity.
 
 Third, there is an over-reliance on headlines as the basis for news analysis. Headlines are often used due to their availability and the simplicity of extracting sentiment from them, making them convenient but insufficient for comprehensive analysis. Numerous studies, including 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -45,11 +57,13 @@ In this study, I apply LLMs to a dataset of Spanish business news articles from 
 % By testing the proposed methodology during such an unstable period, we aim to evaluate its robustness. It is relatively easy for traditional methods to perform well in stable times, but during periods of heightened uncertainty, their limitations become apparent. 
  This is precisely the scenario in which we seek to determine whether LLM-based analysis can provide superior insights. As a benchmark, we will compare our LLM clustering method with KMeans clustering of embeddings. That is, one could simply represent a news article as a  vector in high-dimensional space and then apply an unsupervised clustering method such as KMeans. This is more sophisticated than a sentiment or topic based method, but still does not rely on a comprehensive parsing of the news article content. 
 
-Our methodology consists on defining a schema with which we will guide an LLM to detect article-implied firm-specific shocks from news articles and to further classify them by their type (demand, supply, technological, policy, financial), magnitude (minor, major) and direction (positive, negative). By categorizing and comprehending the economic implications of news, LLMs provide insights that extend beyond mere sentiment analysis, helping to elucidate the underlying mechanisms driving market behavior. The approach taken in this paper involves not only identifying the firms mentioned in each article but also determining the type, magnitude, and direction of the shocks implied by the news. This allows for a more detailed assessment of how specific pieces of information influence particular firms, providing a richer and more precise picture of market dynamics.
+Our methodology consists on defining a schema with which we will guide an LLM to detect article-implied firm-specific shocks from business news and to further classify them by their type (demand, supply, technological, policy, financial), magnitude (minor, major) and direction (positive, negative). By categorizing and comprehending the economic implications of news, LLMs provide insights that extend beyond mere sentiment analysis, helping to elucidate the underlying mechanisms driving market behavior. 
+%The approach taken in this paper involves not only identifying the firms mentioned in each article but also determining the type, magnitude, and direction of the shocks implied by the news. 
+This allows for a more detailed assessment of how specific pieces of information influence particular firms, providing a richer and more precise picture of market dynamics.
 
 The objective of this paper is not to parse the largest dataset available or to develop a realistic trading strategy with commercial application. Rather, it aims to introduce a novel methodology for analyzing news articles in a granular and firm-specific manner, demonstrating its utility through a reduced dataset. By focusing on a smaller, high-quality dataset, the study emphasizes methodological rigor and interpretability. The findings are intended to contribute to a more nuanced understanding of how market participants process news, using a simple trading strategy to illustrate the potential of this approach in capturing the complexities of information processing in financial markets. This methodological contribution lays the groundwork for future research that could extend these techniques to larger datasets and more complex trading applications, ultimately enhancing our ability to understand and predict market behavior in response to news.
 
-The remainder of this paper is organized as follows: Section 2 presents the dataset and preprocessing steps. Section 3 provides a mathematical framework to treat news articles, Section 4 focuses on clustering news articles, first we present our benchmark framework (KMeans clusteting of vector embeddings) and then, our novel LLM-based methodology. In Section 5 we construct a simple trading strategy: first we launch beta-neutral positions for each firm-article pair, then we extract the cluster-average Sharpe Ratios, and finally we select the optimal clusters for trading based on two algorithms that we propose. Lastly, we can form a portfolio and evaluate the trading strategy. Section 6 performs robustness checks by looking at the dependence of our trading strategy results to hyperparameter variability. Finally, Section 7 concludes concludes and discusses the implications of the findings.
+The remainder of this paper is organized as follows: Section 2 presents the dataset and preprocessing steps. Section 3 provides a mathematical framework to treat news articles, Section 4 focuses on clustering news articles, first we present our benchmark framework (KMeans clustering of vector embeddings) and then, our novel LLM-based methodology. In Section 5 we construct a simple trading strategy: first we launch beta-neutral positions for each firm-article pair, then we extract the cluster-average Sharpe Ratios, and finally we select the optimal clusters for trading based on two algorithms that we propose. Lastly, we form a portfolio and evaluate the trading strategy out of sample. Section 6 performs robustness checks by looking at the dependence of our trading strategy results to hyperparameter variability. Finally, Section 7 concludes and discusses the implications of the findings.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%	 LITERATURE REVIEW 		%%%%%%%%%%%%%
