update portfolio statistics table with more metrics + comment on them

--- a/News-implied_Firm_Networks/__main__.tex
+++ b/News-implied_Firm_Networks/__main__.tex
@@ -13,7 +13,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{\textsc{
-{\LARGE Insert title about here}
+{\LARGE Network Effects: Using Large Language Models to Map Complex Firm Relationships from News Data}
 %\\
 %{\large News- }
 }}
@@ -54,11 +54,13 @@
 %----------------------------------------------------
 %\input{txt__ABSTRACT.tex}
 %----------------------------------------------------
+This paper introduces a novel methodology for constructing and analyzing firm networks using Large Language Models (LLMs) applied to news article data. Unlike traditional approaches that rely on simple co-occurrence patterns, our method leverages LLMs to detect and classify meaningful economic relationships between firms. The framework identifies six distinct types of firm relationships: supplier-customer, competitive, partnership, mergers and acquisitions, legal disputes, and other interactions. We develop a mathematical framework that incorporates both directionality (asymmetric relationships) and reflexivity (self-relationships), resulting in a multi-layered network representation. Each layer corresponds to a specific relationship type, with edges weighted by LLM-derived relationship scores. Our methodology enables dynamic network analysis, tracking how firm relationships evolve over time and respond to external events. This enhanced network representation offers new insights into supply chain structures, competitive landscapes, and the propagation of economic shocks through firm networks.
 
-\bigskip
-\noindent\textbf{JEL Codes:} 
+\bx
 
-\noindent\textbf{Keywords:}
+\noindent\textbf{JEL Codes:}  C45, C55, G14, L14
+
+\noindent\textbf{Keywords:} Firm Networks, Large Language Models, Natural Language Processing, Network Analysis, Corporate Relationships
 \end{abstract}
 
 
