--- a/Synthetic_Control_in_Asset_Pricing/Explanations.tex
+++ b/Synthetic_Control_in_Asset_Pricing/Explanations.tex
@@ -926,6 +926,255 @@ To improve robustness, we can employ ensemble methods:
    where $z$ represents random dropout masks
 \end{itemize}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newpage
+\begin{landscape}
+
+
+
+\begin{table}[H]
+ \caption{Statistics of $\mathcal{P}$ Across \protect\linebreak Data Splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\hline
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe} & \textbf{Sortino} & \textbf{Max. DD} & \textbf{Calmar} & \textbf{Skew.} & \textbf{Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\hline 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.070 & 5.3 & 9.7 & 0.5 & 0.6 & -6.9 & 0.8 & -0.50 & 4.17 & -0.009 & -0.014 \\  & \textit{Stable} & 1.489 & 35.8 & 16.8 & 1.8 & 2.2 & -7.6 & 4.7 & 0.08 & 5.09 & -0.014 & -0.023 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 0.969 & -4.6 & 11.6 & -0.4 & -0.4 & -6.5 & -0.7 & -0.59 & 2.96 & -0.011 & -0.018 \\  & \textit{Stable} & 1.285 & 46.3 & 19.3 & 2.0 & 2.4 & -7.6 & 6.1 & -0.30 & 3.63 & -0.018 & -0.026 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.088 & 26.6 & 7.3 & 3.2 & 3.7 & -3.5 & 7.7 & -0.49 & 1.19 & -0.006 & -0.010 \\  & \textit{Stable} & 1.149 & 47.7 & 13.3 & 2.9 & 3.4 & -3.6 & 13.1 & -0.24 & 1.78 & -0.012 & -0.018 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.014 & 4.9 & 6.9 & 0.7 & 1.0 & -3.6 & 1.4 & 1.82 & 5.39 & -0.005 & -0.006 \\  & \textit{Stable} & 1.008 & 2.9 & 14.3 & 0.2 & 0.3 & -4.6 & 0.6 & 2.32 & 13.73 & -0.012 & -0.017 \\  \hline 
+\end{tabular}
+\label{tab:KMeans_portfolio_statistics}
+
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\small\textit{Note: The holding period of the beta-neutral strategies is set to $L = 4$ trading days and the number of traded clusters is $\theta = 0.5k = 13$ (as we have $k^* = 26$ clusters). The selection criteria for these parameters is based on maximizing the Sharpe Ratios of the train and validation samples.}
+\end{minipage}
+
+\end{table}
+
+
+
+\begin{table}[H]
+ \caption{(Annualized) Statistics of $\mathcal{P}$ Across Data Splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\hline
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe Ratio} & \textbf{Sortino Ratio} & \textbf{Max. DD} & \textbf{Calmar Ratio} & \textbf{Skew.} & \textbf{Exc. Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\hline 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.070 & 5.3 & 9.7 & 0.5 & 0.6 & -6.9 & 0.8 & -0.50 & 4.17 & -13.7 & -22.9 \\  & \textit{Stable} & 1.489 & 35.8 & 16.8 & 1.8 & 2.2 & -7.6 & 4.7 & 0.08 & 5.09 & -22.6 & -36.1 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 0.969 & -4.6 & 11.6 & -0.4 & -0.4 & -6.5 & -0.7 & -0.59 & 2.96 & -18.2 & -28.5 \\  & \textit{Stable} & 1.285 & 46.3 & 19.3 & 2.0 & 2.4 & -7.6 & 6.1 & -0.30 & 3.63 & -28.9 & -41.6 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.088 & 26.6 & 7.3 & 3.2 & 3.7 & -3.5 & 7.7 & -0.49 & 1.19 & -9.5 & -15.9 \\  & \textit{Stable} & 1.149 & 47.7 & 13.3 & 2.9 & 3.4 & -3.6 & 13.1 & -0.24 & 1.78 & -18.3 & -28.1 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.014 & 4.9 & 6.9 & 0.7 & 1.0 & -3.6 & 1.4 & 1.82 & 5.39 & -7.8 & -9.7 \\  & \textit{Stable} & 1.008 & 2.9 & 14.3 & 0.2 & 0.3 & -4.6 & 0.6 & 2.32 & 13.73 & -18.9 & -26.8 \\  \hline 
+\end{tabular}
+\label{tab:KMeans_portfolio_statistics}
+
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\small\textit{Note: The holding period of the beta-neutral strategies is set to $L = 4$ trading days and the number of traded clusters is $\theta = 0.5k = 13$ (as we have $k^* = 26$ clusters). The selection criteria for these parameters is based on maximizing the Sharpe Ratios of the train and validation samples.}
+\end{minipage}
+
+\end{table}
+
+
+
+\begin{table}[H]
+ \caption{Annualized statistics of $\mathcal{P}_{\text{KMeans}}$ Across Data Splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\Xhline{2\arrayrulewidth}
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe Ratio} & \textbf{Sortino Ratio} & \textbf{Max. DD} & \textbf{Calmar Ratio} & \textbf{Skew.} & \textbf{Exc. Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\Xhline{2\arrayrulewidth} 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.070 & 5.3 & 9.7 & 0.5 & 0.6 & -6.9 & 0.8 & -0.45 & 4.04 & -13.7 & -22.9 \\  & \textit{Stable} & 1.489 & 35.8 & 16.8 & 1.8 & 2.2 & -7.6 & 4.7 & 0.19 & 5.08 & -22.6 & -36.1 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 0.969 & -4.6 & 11.6 & -0.4 & -0.4 & -6.5 & -0.7 & -0.54 & 2.86 & -18.2 & -28.5 \\  & \textit{Stable} & 1.285 & 46.3 & 19.3 & 2.0 & 2.4 & -7.6 & 6.1 & -0.20 & 3.49 & -28.9 & -41.6 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.088 & 26.6 & 7.3 & 3.2 & 3.7 & -3.5 & 7.7 & -0.47 & 1.16 & -9.5 & -15.9 \\  & \textit{Stable} & 1.149 & 47.7 & 13.3 & 2.9 & 3.4 & -3.6 & 13.1 & -0.20 & 1.76 & -18.3 & -28.1 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.014 & 4.9 & 6.9 & 0.7 & 1.0 & -3.6 & 1.4 & 1.85 & 5.50 & -7.8 & -9.7 \\  & \textit{Stable} & 1.008 & 2.9 & 14.3 & 0.2 & 0.3 & -4.6 & 0.6 & 2.46 & 14.57 & -18.9 & -26.8 \\  \hline 
+\end{tabular}
+\label{tab:KMeans_portfolio_statistics}
+
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\small\textit{Note: 
+Annualized portfolio statistics of the trading strategy based on clusters obtained from applying KMeans to article embeddings. The statistics provided include performance metrics (Cumulative Return, Average Return), risk measures (Standard Deviation, Maximum Drawdown, Value at Risk, Conditional Value at Risk), risk-adjusted performance ratios (Sharpe Ratio, Sortino Ratio, Calmar Ratio), and return distribution characteristics (Skewness, Excess Kurtosis). These statistics are provided for both cluster-selection algorithms: Greedy and Stable. The Greedy algorithm longs (shorts) clusters that maximize (minimize) the cluster-average-$SR$ in the validation sample subject to a positivity (negativity) constraint, while the Stable algorithm longs (shorts) clusters that minimize the rank difference between the training and validation rankings of the cluster-average-$SR$'s subject to a positivity (negativity) constraint, which is now imposed on both sample splits. In both algorithms, the cardinality of each leg is upper-bounded by a hyperparameter $\theta$. 
+The holding period of the beta-neutral positions is set to $L$ = 4 trading days and the number of traded clusters is $\theta = 0.5k=13$ as there are $k^*=26$ KMeans clusters of article embeddings. The selection criteria for these hyperparameters ($L,\theta$) is based on maximizing the Sharpe Ratios of the train and validation samples.
+}
+\end{minipage}
+
+\end{table}
+
+
+
+\begin{table}[H]
+ \caption{Annualized statistics of $\mathcal{P}_{\text{KMeans}}$ across data splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\Xhline{2\arrayrulewidth}
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe Ratio} & \textbf{Sortino Ratio} & \textbf{Max. DD} & \textbf{Calmar Ratio} & \textbf{Skew.} & \textbf{Exc. Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\Xhline{2\arrayrulewidth} 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.310 & 23.1 & 9.6 & 2.2 & 2.9 & -6.3 & 3.7 & 1.47 & 9.93 & -13.6 & -18.9 \\  & \textit{Stable} & 1.365 & 27.0 & 8.6 & 2.8 & 3.4 & -5.9 & 4.6 & 0.28 & 2.24 & -11.9 & -16.9 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 1.112 & 17.6 & 11.4 & 1.4 & 1.9 & -6.3 & 2.8 & 1.65 & 9.00 & -15.7 & -21.0 \\  & \textit{Stable} & 1.177 & 28.3 & 9.9 & 2.5 & 3.0 & -5.9 & 4.8 & 0.16 & 1.71 & -13.5 & -19.6 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.086 & 26.4 & 8.2 & 2.9 & 3.8 & -3.1 & 8.6 & 0.17 & 1.38 & -10.6 & -16.8 \\  & \textit{Stable} & 1.054 & 16.0 & 6.9 & 2.2 & 2.4 & -1.9 & 8.4 & 0.30 & 1.58 & -9.3 & -14.2 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.084 & 30.8 & 6.2 & 4.3 & 6.0 & -1.5 & 21.0 & 1.49 & 8.30 & -6.9 & -9.9 \\  & \textit{Stable} & 1.100 & 37.2 & 7.1 & 4.4 & 7.2 & -1.1 & 34.5 & 0.84 & 1.95 & -9.5 & -11.3 \\  \hline 
+\end{tabular}
+\label{tab:KMeans_portfolio_statistics}
+
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\small\textit{Note: 
+Annualized portfolio statistics of the trading strategy based on clusters obtained from applying KMeans to article embeddings. The statistics provided include performance metrics (Cumulative Return, Average Return), risk measures (Standard Deviation, Maximum Drawdown, Value at Risk, Conditional Value at Risk), risk-adjusted performance ratios (Sharpe Ratio, Sortino Ratio, Calmar Ratio), and return distribution characteristics (Skewness, Excess Kurtosis). These statistics are provided for both cluster-selection algorithms: Greedy and Stable. The Greedy algorithm longs (shorts) clusters that maximize (minimize) the cluster-average-$SR$ in the validation sample subject to a positivity (negativity) constraint, while the Stable algorithm longs (shorts) clusters that minimize the rank difference between the training and validation rankings of the cluster-average-$SR$'s subject to a positivity (negativity) constraint, which is now imposed on both sample splits. In both algorithms, the cardinality of each leg is upper-bounded by a hyperparameter $\theta$. 
+The holding period of the beta-neutral positions is set to $L$ = 4 trading days and the number of traded clusters is $\theta = 0.5k=13$ as there are $k^*=26$ KMeans clusters of article embeddings. The selection criteria for these hyperparameters ($L,\theta$) is based on maximizing the Sharpe Ratios of the train and validation samples.
+}
+\end{minipage}
+
+\end{table}
+
+\end{landscape}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\begin{landscape}
+\begin{table}[H]
+ \caption{Statistics of $\mathcal{P}_{\text{LLM}}$ across data splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\Xhline{2\arrayrulewidth}
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe Ratio} & \textbf{Sortino Ratio} & \textbf{Max. DD} & \textbf{Calmar Ratio} & \textbf{Skew.} & \textbf{Exc. Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\Xhline{2\arrayrulewidth} 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.310 & 23.1 & 9.6 & 2.2 & 2.9 & -6.3 & 3.7 & 1.47 & 9.93 & -13.6 & -18.9 \\  & \textit{Stable} & 1.365 & 27.0 & 8.6 & 2.8 & 3.4 & -5.9 & 4.6 & 0.28 & 2.24 & -11.9 & -16.9 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 1.112 & 17.6 & 11.4 & 1.4 & 1.9 & -6.3 & 2.8 & 1.65 & 9.00 & -15.7 & -21.0 \\  & \textit{Stable} & 1.177 & 28.3 & 9.9 & 2.5 & 3.0 & -5.9 & 4.8 & 0.16 & 1.71 & -13.5 & -19.6 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.086 & 26.4 & 8.2 & 2.9 & 3.8 & -3.1 & 8.6 & 0.17 & 1.38 & -10.6 & -16.8 \\  & \textit{Stable} & 1.054 & 16.0 & 6.9 & 2.2 & 2.4 & -1.9 & 8.4 & 0.30 & 1.58 & -9.3 & -14.2 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.084 & 30.8 & 6.2 & 4.3 & 6.0 & -1.5 & 21.0 & 1.49 & 8.30 & -6.9 & -9.9 \\  & \textit{Stable} & 1.100 & 37.2 & 7.1 & 4.4 & 7.2 & -1.1 & 34.5 & 0.84 & 1.95 & -9.5 & -11.3 \\  \hline \end{tabular} \label{tab:LLM_portfolio_statistics}
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\scriptsize\textit{Note: 
+Portfolio statistics of the trading strategy applied to the LLM clusters.
+The statistics provided include performance metrics (Cumulative Return, Average Return), risk measures (Standard Deviation, Maximum Drawdown, Value at Risk, Conditional Value at Risk), risk-adjusted performance ratios (Sharpe Ratio, Sortino Ratio, Calmar Ratio), and return distribution characteristics (Skewness, Excess Kurtosis). These statistics are provided for both cluster-selection algorithms: Greedy and Stable. 
+Except for the Cumulative Return, all returns are annualized. The Sharpe Ratio is computed using the daily returns, assuming 252 trading days in a year. The Sortino Ratio is calculated using the daily downside returns. The Maximum Drawdown is the maximum loss from a peak to a trough. The Calmar Ratio is the ratio of the annualized return to the maximum drawdown. Skewness measures the asymmetry of the return distribution, while Kurtosis quantifies the tails' thickness. The Value at Risk (VaR) and Conditional Value at Risk (CVaR) are calculated at a 95\% confidence level.
+The Greedy algorithm longs (shorts) clusters that maximize (minimize) the cluster-average-$SR$ in the validation sample subject to a positivity (negativity) constraint, while the Stable algorithm longs (shorts) clusters that minimize the rank difference between the training and validation rankings of the cluster-average-$SR$'s subject to a positivity (negativity) constraint, which is now imposed on both sample splits. In both algorithms, the cardinality of each leg is upper-bounded by a hyperparameter $\theta$. 
+The holding period of the beta-neutral positions is set to $L$ = 4 trading days and the number of traded clusters is, $\theta = 0.5k=13$ as there are $k^*=26$ KMeans clusters of article embeddings. The selection criteria for these hyperparameters ($L,\theta$) is based on maximizing the Sharpe Ratios of the train and validation samples.
+}
+\end{minipage}
+\end{table}
+\end{landscape}
+
+
+\begin{landscape}
+\begin{table}[H]
+ \caption{Statistics of $\mathcal{P}_{\text{KMeans}}$ across data splits}
+\centering
+\renewcommand{\arraystretch}{1.1}  % Increased line spacing
+% Define new column types for better spacing
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\begin{tabular}{
+    P{1.5cm}  % Split
+    P{1.4cm}  % Algorithm
+    P{1.2cm}  % Cum. Return
+    P{1.1cm}  % Avg. Return
+    P{1.1cm}  % St. Deviation
+    P{1.3cm}  % Sharpe Ratio
+    P{1.3cm}  % Sortino Ratio
+    P{1.2cm}  % Max. Drawdown
+    P{1.3cm}  % Calmar Ratio
+    P{1.2cm}  % Skewness
+    P{1.1cm}  % Kurtosis
+    P{1.2cm}  % VaR
+    P{1.2cm}  % CVaR
+}
+\Xhline{2\arrayrulewidth}
+\textbf{Split} & \textbf{Algo.} & \textbf{Cum. Ret.} & \textbf{Avg. Ret.} & \textbf{St. Dev.} & \textbf{Sharpe Ratio} & \textbf{Sortino Ratio} & \textbf{Max. DD} & \textbf{Calmar Ratio} & \textbf{Skew.} & \textbf{Exc. Kurt.} & \textbf{VaR 95\%} & \textbf{CVaR 95\%} \\
+\Xhline{2\arrayrulewidth} 
+\multirow{2}{*}{All} & \textit{Greedy} & 1.070 & 5.3 & 9.7 & 0.5 & 0.6 & -6.9 & 0.8 & -0.45 & 4.04 & -13.7 & -22.9 \\  & \textit{Stable} & 1.489 & 35.8 & 16.8 & 1.8 & 2.2 & -7.6 & 4.7 & 0.19 & 5.08 & -22.6 & -36.1 \\  \hline \multirow{2}{*}{Train} & \textit{Greedy} & 0.969 & -4.6 & 11.6 & -0.4 & -0.4 & -6.5 & -0.7 & -0.54 & 2.86 & -18.2 & -28.5 \\  & \textit{Stable} & 1.285 & 46.3 & 19.3 & 2.0 & 2.4 & -7.6 & 6.1 & -0.20 & 3.49 & -28.9 & -41.6 \\  \hline \multirow{2}{*}{Validation} & \textit{Greedy} & 1.088 & 26.6 & 7.3 & 3.2 & 3.7 & -3.5 & 7.7 & -0.47 & 1.16 & -9.5 & -15.9 \\  & \textit{Stable} & 1.149 & 47.7 & 13.3 & 2.9 & 3.4 & -3.6 & 13.1 & -0.20 & 1.76 & -18.3 & -28.1 \\  \hline \multirow{2}{*}{Test} & \textit{Greedy} & 1.014 & 4.9 & 6.9 & 0.7 & 1.0 & -3.6 & 1.4 & 1.85 & 5.50 & -7.8 & -9.7 \\  & \textit{Stable} & 1.008 & 2.9 & 14.3 & 0.2 & 0.3 & -4.6 & 0.6 & 2.46 & 14.57 & -18.9 & -26.8 \\  \hline \end{tabular} \label{tab:KMeans_portfolio_statistics}
+\vspace{0.5cm}
+\begin{minipage}{\textwidth}
+\setlength{\parindent}{0pt}
+\scriptsize\textit{Note: 
+Portfolio statistics of the trading strategy based on clusters obtained from applying KMeans to article embeddings. 
+The statistics provided include performance metrics (Cumulative Return, Average Return), risk measures (Standard Deviation, Maximum Drawdown, Value at Risk, Conditional Value at Risk), risk-adjusted performance ratios (Sharpe Ratio, Sortino Ratio, Calmar Ratio), and return distribution characteristics (Skewness, Excess Kurtosis). These statistics are provided for both cluster-selection algorithms: Greedy and Stable. 
+Except for the Cumulative Return, all returns are annualized. The Sharpe Ratio is computed using the daily returns, assuming 252 trading days in a year. The Sortino Ratio is calculated using the daily downside returns. The Maximum Drawdown is the maximum loss from a peak to a trough. The Calmar Ratio is the ratio of the annualized return to the maximum drawdown. Skewness measures the asymmetry of the return distribution, while Kurtosis quantifies the tails' thickness. The Value at Risk (VaR) and Conditional Value at Risk (CVaR) are calculated at a 95\% confidence level.
+The Greedy algorithm longs (shorts) clusters that maximize (minimize) the cluster-average-$SR$ in the validation sample subject to a positivity (negativity) constraint, while the Stable algorithm longs (shorts) clusters that minimize the rank difference between the training and validation rankings of the cluster-average-$SR$'s subject to a positivity (negativity) constraint, which is now imposed on both sample splits. In both algorithms, the cardinality of each leg is upper-bounded by a hyperparameter $\theta$. 
+The holding period of the beta-neutral positions is set to $L$ = 4 trading days and the number of traded clusters is $\theta = 0.5k=13$ as there are $k^*=26$ KMeans clusters of article embeddings. The selection criteria for these hyperparameters ($L,\theta$) is based on maximizing the Sharpe Ratios of the train and validation samples.
+}
+\end{minipage}
+\end{table}
+\end{landscape}
 
 
 
